@@ -15,6 +15,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #11224: Fixed a regression in tarfile that affected the file-like
+  objects returned by TarFile.extractfile() regarding performance, memory
+  consumption and failures with the stream interface.
+
 - Issue #11074: Make 'tokenize' so it can be reloaded.
 
 - Issue #4681: Allow mmap() to work on file sizes and offsets larger than
